# napful

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: cli.rs  commands.rs  errors.rs  executor.rs  file_system.rs  index.rs  main.rs
src/models/: file.rs  request.rs
src/requests/: mod.rs  model.rs  parser.rs
src/storage/: database.rs  file.rs
src/storage/repositories/: file.rs  request.rs
