[package]
name = "napful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
mockall = "0.12.1"
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2.4.0"
